DLang.Tests/Tests/errors/runtime/stack_overflow.d
var f := func() is
    f();
end
f();
